# azure-ml

./: .gitignore  README.md
environments/: list-all-env.py  local-dev-env-setup.md  retrieve-description.py
kubernetes/mlflow/: mlflow-aks-setup.sh
notebooks/: azure-sdk.ipynb  config.json  pyproject.toml
scripts/compute/: aks-as-ml-compute.sh  compute_cli_commands.sh  create_compute_cluster.py  create_compute_instance.py
scripts/workspace/: create_workspace.sh  download_config.py
