[tool.poetry]
name = "azure-ml-project"
version = "0.1.0"
description = ""
authors = ["ifs-thsklk <tharindu.sankalpa@ifs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
azure-ai-ml = "^1.26.0"
azure-identity = "^1.21.0"
ipykernel = "^6.29.5"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
numpy = "^2.2.4"
jupyter = "^1.1.1"
notebook = "^7.3.3"
azure-mgmt-storage = "^22.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
